--- a/Dockerfile.postgraphile
+++ b/Dockerfile.postgraphile
@@ -2,3 +2,6 @@ FROM graphile/postgraphile:4-12
 
 RUN yarn add postgraphile-plugin-connection-filter
 RUN yarn add @graphile-contrib/pg-simplify-inflector
+RUN yarn add postgraphile-plugin-nested-mutations
+
+ADD ./scripts/.postgraphilerc.js .
