--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_DB: musicbot
     restart: always
     ports:
-      - 127.0.0.1:5433:5433
+      - 127.0.0.1:5433:5432
     volumes:
       - /home/postgres-data:/var/lib/postgresql/data
 
@@ -20,6 +20,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.postgraphile
+    stop_signal: SIGKILL
     entrypoint: ["tail", "-F", "anything"]
 
   # public API
@@ -36,6 +37,8 @@ services:
     command: [
       "--retry-on-init-fail",
       "--cors",
+      "--enable-query-batching",
+      "--extended-errors", "hint,detail,errcode",
       "--no-setof-functions-contain-nulls",
       "--no-ignore-rbac",
       "--no-ignore-indexes",
@@ -51,7 +54,7 @@ services:
       "--jwt-secret", $MUSICBOT_SECRET,
       "--body-size-limit", "10MB",
       "--simple-collections", "both",
-      "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector"
+      "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector,postgraphile-plugin-nested-mutations"
     ]
 
   # private API
@@ -68,6 +71,8 @@ services:
     command: [
       "--retry-on-init-fail",
       "--cors",
+      "--enable-query-batching",
+      "--extended-errors", "hint,detail,errcode",
       "--include-extension-resources",
       "--no-setof-functions-contain-nulls",
       "--no-ignore-indexes",
@@ -80,7 +85,7 @@ services:
       "--enhance-graphiql",
       "--allow-explain",
       "--simple-collections", "both",
-      "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector"
+      "--append-plugins", "postgraphile-plugin-connection-filter,@graphile-contrib/pg-simplify-inflector,postgraphile-plugin-nested-mutations"
     ]
 
   reverse_proxy:
