--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ colorlog = "^6.4.1"
 click-skeleton = "^0.16"
 pgcli = "^3.2.0"
 psycopg2 = "^2.9.1"
+miniupnpc = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
