--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -40,6 +40,7 @@ lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0
 logging-tree==1.9
 markupsafe==2.0.1; python_version >= "3.6" and python_version <= "3.9"
 mccabe==0.6.1; python_version >= "3.6" and python_version < "4.0" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0")
+miniupnpc==2.0.2
 munch==2.5.0; python_version >= "3.6" and python_version <= "3.9"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 mypy-extensions==0.4.3; python_version >= "3.5"
