--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ iniconfig==1.1.1; python_version >= "3.6" and python_version <= "3.9"
 jinja2==3.0.1; python_version >= "3.6" and python_version <= "3.9"
 logging-tree==1.9
 markupsafe==2.0.1; python_version >= "3.6" and python_version <= "3.9"
+miniupnpc==2.0.2
 munch==2.5.0; python_version >= "3.6" and python_version <= "3.9"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 packaging==21.0; python_version >= "3.6" and python_version <= "3.9"
