--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ click-skeleton = "^0.16"
 pgcli = "^3.2.0"
 psycopg2 = "^2.9.1"
 miniupnpc = "^2.0.2"
+gql = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.6"
