--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-astroid==2.7.2; python_version >= "3.6" and python_version < "4.0"
+astroid==2.7.3; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" and sys_platform == "win32" or python_version >= "3.6" and python_version <= "3.9" and sys_platform == "win32" and python_full_version >= "3.4.0"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
@@ -29,6 +29,8 @@ docopt==0.6.2; python_version >= "3.4"
 docutils==0.17.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 flake8==3.9.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 fuzzywuzzy==0.18.0
+gql==2.0.0
+graphql-core==2.3.2
 graphql-py==0.8.1
 humanize==3.11.0; python_version >= "3.6"
 idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
@@ -50,13 +52,14 @@ paramiko==2.7.2; python_version >= "3.6"
 pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pgcli==3.2.0; python_version >= "3.6"
 pgspecial==1.13.0; python_version >= "3.6"
-platformdirs==2.2.0; python_version >= "3.6" and python_version < "4.0"
-pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
+platformdirs==2.3.0; python_version >= "3.6" and python_version < "4.0"
+pluggy==1.0.0; python_version >= "3.6" and python_version <= "3.9"
 ply==3.11
 poetry-core==1.0.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 poetry2setup==1.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 prettytable==2.2.0; python_version >= "3.6"
 progressbar2==3.53.1
+promise==2.3
 prompt-toolkit==3.0.20; python_full_version >= "3.6.2"
 psycopg2==2.9.1; python_version >= "3.6"
 py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
@@ -74,7 +77,7 @@ pytest-click==1.0.2; python_version >= "3.6" and python_version <= "3.9"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-docker-compose==3.2.1
 pytest-timeout==1.4.2
-pytest==6.2.4; python_version >= "3.6" and python_version <= "3.9" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
+pytest==6.2.5; python_version >= "3.6" and python_version <= "3.9" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 python-dotenv==0.19.0; python_version >= "3.5"
 python-levenshtein==0.12.2
@@ -86,6 +89,7 @@ pywin32==227; sys_platform == "win32" and python_version >= "3.6"
 pyyaml==5.4.1; python_version >= "3.4" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.4"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 restructuredtext-lint==1.3.2
+rx==1.6.1
 semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
 setproctitle==1.2.2; python_version >= "3.6"
 shellingham==1.4.0; python_version >= "3.6" and python_version <= "3.9"
@@ -98,7 +102,7 @@ texttable==1.6.4; python_version >= "3.4"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.5.0"
 types-python-slugify==0.1.2
 types-requests==2.25.6
-typing-extensions==3.10.0.1; python_version >= "3.5"
+typing-extensions==3.10.0.2; python_version >= "3.5"
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 watchdog==2.1.5; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
