--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://postgres:musicbot@db:5432/musicbot
 MUSICBOT_SECRET=my_little_secret
+DEBUG="postgraphile:graphql,postgraphile:request,postgraphile:postgres*"
