--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       "--retry-on-init-fail",
       "--cors",
       "--enable-query-batching",
-      "--extended-errors", "hint,detail,errcode",
+      "--extended-errors", "severity,code,detail,hint,position,internalPosition,internalQuery,where,schema,table,column,dataType,constraint,file,line,routine",
       "--no-setof-functions-contain-nulls",
       "--no-ignore-rbac",
       "--no-ignore-indexes",
@@ -72,7 +72,7 @@ services:
       "--retry-on-init-fail",
       "--cors",
       "--enable-query-batching",
-      "--extended-errors", "hint,detail,errcode",
+      "--extended-errors", "severity,code,detail,hint,position,internalPosition,internalQuery,where,schema,table,column,dataType,constraint,file,line,routine",
       "--include-extension-resources",
       "--no-setof-functions-contain-nulls",
       "--no-ignore-indexes",
