--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ pytest-docker-compose = "^3.1.2"
 pytest-timeout = "^1.4.2"
 poetry2setup = "^1.0.0"
 mypy = "^0.910"
+docker = "5.0.0"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
