--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" and sys_platform == "win32" or python_version >= "3.6" and python_version <= "3.9" and sys_platform == "win32" and python_full_version >= "3.4.0"
+atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_version >= "3.6" and python_full_version <= "3.9.6" and sys_platform == "win32" and python_full_version >= "3.4.0"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
 certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 charset-normalizer==2.0.4; python_full_version >= "3.6.0" and python_version >= "3"
 cli-helpers==2.2.0; python_version >= "3.6"
-click-aliases==1.0.1; python_version >= "3.6" and python_version <= "3.9"
-click-completion==0.5.2; python_version >= "3.6" and python_version <= "3.9"
-click-didyoumean==0.0.3; python_version >= "3.6" and python_version <= "3.9"
-click-help-colors==0.9.1; python_version >= "3.6" and python_version <= "3.9"
-click-option-group==0.5.3; python_version >= "3.6" and python_version <= "3.9"
-click-skeleton==0.16; python_version >= "3.6" and python_version <= "3.9"
-click==8.0.1; python_version >= "3.6" and python_version <= "3.9"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version <= "3.9" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" and python_version <= "3.9" and platform_system == "Windows"
+click-aliases==1.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
+click-completion==0.5.2; python_version >= "3.6" and python_full_version <= "3.9.6"
+click-didyoumean==0.0.3; python_version >= "3.6" and python_full_version <= "3.9.6"
+click-help-colors==0.9.1; python_version >= "3.6" and python_full_version <= "3.9.6"
+click-option-group==0.5.3; python_version >= "3.6" and python_version < "4" and python_full_version <= "3.9.6"
+click-skeleton==0.17; python_version >= "3.6" and python_full_version <= "3.9.6"
+click==8.0.1; python_version >= "3.6" and python_full_version <= "3.9.6" and python_version < "4"
+colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" and platform_system == "Windows" and python_full_version <= "3.9.6"
 colorlog==6.4.1; python_version >= "3.6"
 configobj==5.0.6; python_version >= "3.6"
 fuzzywuzzy==0.18.0
@@ -20,31 +20,31 @@ graphql-core==2.3.2
 graphql-py==0.8.1
 humanize==3.11.0; python_version >= "3.6"
 idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-iniconfig==1.1.1; python_version >= "3.6" and python_version <= "3.9"
-jinja2==3.0.1; python_version >= "3.6" and python_version <= "3.9"
+iniconfig==1.1.1; python_version >= "3.6" and python_full_version <= "3.9.6"
+jinja2==3.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
 logging-tree==1.9
-markupsafe==2.0.1; python_version >= "3.6" and python_version <= "3.9"
+markupsafe==2.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
 miniupnpc==2.0.2
-munch==2.5.0; python_version >= "3.6" and python_version <= "3.9"
+munch==2.5.0; python_version >= "3.6" and python_full_version <= "3.9.6"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
-packaging==21.0; python_version >= "3.6" and python_version <= "3.9"
+packaging==21.0; python_version >= "3.6" and python_full_version <= "3.9.6"
 pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pgcli==3.2.0; python_version >= "3.6"
 pgspecial==1.13.0; python_version >= "3.6"
-pluggy==1.0.0; python_version >= "3.6" and python_version <= "3.9"
+pluggy==1.0.0; python_version >= "3.6" and python_full_version <= "3.9.6"
 ply==3.11
 prettytable==2.2.0; python_version >= "3.6"
-progressbar2==3.53.1
+progressbar2==3.53.2
 promise==2.3
 prompt-toolkit==3.0.20; python_full_version >= "3.6.2"
 psycopg2==2.9.1; python_version >= "3.6"
-py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
+py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.4.0"
 pyacoustid==1.2.2
 pydub==0.25.1
 pygments==2.10.0; python_version >= "3.5"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
-pytest-click==1.0.2; python_version >= "3.6" and python_version <= "3.9"
-pytest==6.2.5; python_version >= "3.6" and python_version <= "3.9"
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.3.0"
+pytest-click==1.0.2; python_version >= "3.6" and python_full_version <= "3.9.6"
+pytest==6.2.5; python_version >= "3.6" and python_full_version <= "3.9.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 python-levenshtein==0.12.2
 python-slugify==5.0.2; python_version >= "3.6"
@@ -53,15 +53,15 @@ python-vlc==3.0.12118
 pytzdata==2020.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 rx==1.6.1
-semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.4.0"
+semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.4.0"
 setproctitle==1.2.2; python_version >= "3.6"
-shellingham==1.4.0; python_version >= "3.6" and python_version <= "3.9"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.5.0"
+shellingham==1.4.0; python_version >= "3.6" and python_full_version <= "3.9.6"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_full_version <= "3.9.6"
 spotipy==2.19.0
-sqlparse==0.4.1; python_version >= "3.6"
+sqlparse==0.4.2; python_version >= "3.6"
 tabulate==0.8.9; python_version >= "3.6"
 text-unidecode==1.3; python_version >= "3.6"
-toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version <= "3.9" or python_version >= "3.6" and python_version <= "3.9" and python_full_version >= "3.3.0"
+toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.3.0"
 types-python-slugify==5.0.0
 types-requests==2.25.6
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
