--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 musicbot = 'musicbot.main:main'
-musicbot-fire = 'musicbot.main:main_fire'
 
 [tool.poetry.dependencies]
 python = "<3.9,>=3.8"
@@ -56,7 +55,7 @@ pytest-docker-compose = "^3.1.2"
 pytest-timeout = "^1.4.2"
 poetry2setup = "^1.0.0"
 mypy = "^0.910"
-docker = "5.0.2"
+docker = { version = "^5.0", markers = "sys_platform != 'win32'" }
 
 [tool.pytest.ini_options]
 minversion = "6.0"
