--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,10 +2,10 @@ astroid==2.7.3; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_version >= "3.6" and python_full_version <= "3.9.6" and sys_platform == "win32" and python_full_version >= "3.4.0"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
-bcrypt==3.2.0; python_version >= "3.6"
+bcrypt==3.2.0; python_version >= "3.6" and sys_platform != "win32"
 bump2version==1.0.1; python_version >= "3.5"
 certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-cffi==1.14.6; python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0")
+cffi==1.14.6; python_version >= "3.6" and sys_platform != "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0")
 charset-normalizer==2.0.4; python_full_version >= "3.6.0" and python_version >= "3"
 cli-helpers==2.2.0; python_version >= "3.6"
 click-aliases==1.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
@@ -20,10 +20,10 @@ colorlog==6.4.1; python_version >= "3.6"
 configobj==5.0.6; python_version >= "3.6"
 coverage-badge==1.0.1
 coverage==5.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
-cryptography==3.4.8; python_version >= "3.6"
+cryptography==3.4.8; python_version >= "3.6" and sys_platform != "win32"
 distro==1.6.0; python_version >= "3.4"
 docker-compose==1.29.2; python_version >= "3.4"
-docker==5.0.2; python_version >= "3.6"
+docker==5.0.2; python_version >= "3.6" or sys_platform != "win32"
 dockerpty==0.4.1; python_version >= "3.4"
 docopt==0.6.2; python_version >= "3.4"
 docutils==0.17.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
@@ -48,7 +48,7 @@ mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 mypy-extensions==0.4.3; python_version >= "3.5"
 mypy==0.910; python_version >= "3.5"
 packaging==21.0; python_version >= "3.6" and python_full_version <= "3.9.6"
-paramiko==2.7.2; python_version >= "3.6"
+paramiko==2.7.2; python_version >= "3.6" and sys_platform != "win32"
 pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pgcli==3.2.0; python_version >= "3.6"
 pgspecial==1.13.0; python_version >= "3.6"
@@ -65,12 +65,12 @@ psycopg2==2.9.1; python_version >= "3.6"
 py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.4.0"
 pyacoustid==1.2.2
 pycodestyle==2.7.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
+pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0"
 pydub==0.25.1
 pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pygments==2.10.0; python_version >= "3.5"
 pylint==2.10.2; python_version >= "3.6" and python_version < "4.0"
-pynacl==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.4.0"
+pynacl==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0"
 pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.3.0"
 pyrsistent==0.18.0; python_version >= "3.6"
 pytest-click==1.0.2; python_version >= "3.6" and python_full_version <= "3.9.6"
@@ -85,7 +85,7 @@ python-slugify==5.0.2; python_version >= "3.6"
 python-utils==2.5.6
 python-vlc==3.0.12118
 pytzdata==2020.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pywin32==227; sys_platform == "win32" and python_version >= "3.6"
+pywin32==227
 pyyaml==5.4.1; python_version >= "3.4" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.4"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 restructuredtext-lint==1.3.2
@@ -93,7 +93,7 @@ rx==1.6.1
 semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.4.0"
 setproctitle==1.2.2; python_version >= "3.6"
 shellingham==1.4.0; python_version >= "3.6" and python_full_version <= "3.9.6"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_full_version <= "3.9.6"
+six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_full_version <= "3.9.6" and sys_platform != "win32"
 spotipy==2.19.0
 sqlparse==0.4.2; python_version >= "3.6"
 tabulate==0.8.9; python_version >= "3.6"
@@ -106,6 +106,6 @@ typing-extensions==3.10.0.2; python_version >= "3.5"
 urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 watchdog==2.1.5; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
-websocket-client==0.59.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+websocket-client==0.59.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0"
 wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
 youtube-dl==2021.6.6
