--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "poetry.core.masonry.api"
 musicbot = 'musicbot.main:main'
 
 [tool.poetry.dependencies]
-python = "<3.9,>=3.8"
+python = ">=3.8,<3.10"
 logging-tree = "^1.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
@@ -28,7 +28,6 @@ humanize = "^3.0.1"
 prettytable = "^2.1.0"
 youtube_dl = "^2021.3.3"
 watchdog = "^2.0.2"
-graphql-py = "^0.8.1"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = "^0.12.2"
@@ -38,24 +37,23 @@ types-requests = "^2.25.0"
 colorlog = "^6.4.1"
 pgcli = "^3.2.0"
 psycopg2 = "^2.9.1"
-miniupnpc = "^2.0.2"
-gql = "^2.0.0"
 types-python-slugify = "^5.0.0"
-click-skeleton = "^0.17"
+click-skeleton = "^0.19"
+gql = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest-cov = "^2.6"
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
 pylint = "^2.6.0"
 Pygments = "^2.7.0"
-flake8 = "^3.8.3"
 pytest-docker-compose = "^3.1.2"
-pytest-timeout = "^1.4.2"
 poetry2setup = "^1.0.0"
 mypy = "^0.910"
 docker = { version = "^5.0", markers = "sys_platform != 'win32'" }
+pytest-cov = "^3.0.0"
+pytest-timeout = "^2.0.1"
+flake8 = "^4.0.1"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
