--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,47 @@
-atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_version >= "3.6" and python_full_version <= "3.9.6" and sys_platform == "win32" and python_full_version >= "3.4.0"
+atomicwrites==1.4.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6" and sys_platform == "win32"
 attrs==21.2.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
-certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-charset-normalizer==2.0.4; python_full_version >= "3.6.0" and python_version >= "3"
+certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+charset-normalizer==2.0.7; python_full_version >= "3.6.0" and python_version >= "3"
 cli-helpers==2.2.0; python_version >= "3.6"
-click-aliases==1.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
-click-completion==0.5.2; python_version >= "3.6" and python_full_version <= "3.9.6"
-click-didyoumean==0.0.3; python_version >= "3.6" and python_full_version <= "3.9.6"
-click-help-colors==0.9.1; python_version >= "3.6" and python_full_version <= "3.9.6"
-click-option-group==0.5.3; python_version >= "3.6" and python_version < "4" and python_full_version <= "3.9.6"
-click-skeleton==0.17; python_version >= "3.6" and python_full_version <= "3.9.6"
-click==8.0.1; python_version >= "3.6" and python_full_version <= "3.9.6" and python_version < "4"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" and platform_system == "Windows" and python_full_version <= "3.9.6"
-colorlog==6.4.1; python_version >= "3.6"
+click-aliases==1.0.1; python_full_version >= "3.6.2" and python_version < "3.10"
+click-completion==0.5.2; python_full_version >= "3.6.2" and python_version < "3.10"
+click-didyoumean==0.3.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version < "3.10"
+click-help-colors==0.9.1; python_full_version >= "3.6.2" and python_version < "3.10"
+click-option-group==0.5.3; python_version >= "3.6" and python_version < "3.10" and python_full_version >= "3.6.2"
+click-skeleton==0.19; python_full_version >= "3.6.2" and python_version < "3.10"
+click==8.0.3; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6" and python_full_version < "4.0.0"
+colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and platform_system == "Windows" and python_version < "3.10"
+colorlog==6.6.0; python_version >= "3.6"
 configobj==5.0.6; python_version >= "3.6"
 fuzzywuzzy==0.18.0
 gql==2.0.0
 graphql-core==2.3.2
-graphql-py==0.8.1
-humanize==3.11.0; python_version >= "3.6"
-idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-iniconfig==1.1.1; python_version >= "3.6" and python_full_version <= "3.9.6"
-jinja2==3.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
+humanize==3.12.0; python_version >= "3.6"
+idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
+iniconfig==1.1.1; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+jinja2==3.0.2; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 logging-tree==1.9
-markupsafe==2.0.1; python_version >= "3.6" and python_full_version <= "3.9.6"
-miniupnpc==2.0.2
-munch==2.5.0; python_version >= "3.6" and python_full_version <= "3.9.6"
+markupsafe==2.0.1; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+munch==2.5.0; python_full_version >= "3.6.2" and python_version < "3.10"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
-packaging==21.0; python_version >= "3.6" and python_full_version <= "3.9.6"
+packaging==21.2; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pgcli==3.2.0; python_version >= "3.6"
 pgspecial==1.13.0; python_version >= "3.6"
-pluggy==1.0.0; python_version >= "3.6" and python_full_version <= "3.9.6"
-ply==3.11
-prettytable==2.2.0; python_version >= "3.6"
-progressbar2==3.53.2
+pluggy==1.0.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+prettytable==2.4.0; python_version >= "3.6"
+progressbar2==3.55.0
 promise==2.3
-prompt-toolkit==3.0.20; python_full_version >= "3.6.2"
+prompt-toolkit==3.0.22; python_full_version >= "3.6.2"
 psycopg2==2.9.1; python_version >= "3.6"
-py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.4.0"
+py==1.11.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pyacoustid==1.2.2
 pydub==0.25.1
 pygments==2.10.0; python_version >= "3.5"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.3.0"
-pytest-click==1.0.2; python_version >= "3.6" and python_full_version <= "3.9.6"
-pytest==6.2.5; python_version >= "3.6" and python_full_version <= "3.9.6"
+pyparsing==2.4.7; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+pytest-click==1.0.2; python_full_version >= "3.6.2" and python_version < "3.10"
+pytest==6.2.5; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 python-levenshtein==0.12.2
 python-slugify==5.0.2; python_version >= "3.6"
@@ -53,18 +50,18 @@ python-vlc==3.0.12118
 pytzdata==2020.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 rx==1.6.1
-semver==2.13.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.4.0"
+semver==2.13.0; python_full_version >= "3.6.2" and python_version < "3.10"
 setproctitle==1.2.2; python_version >= "3.6"
-shellingham==1.4.0; python_version >= "3.6" and python_full_version <= "3.9.6"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_full_version <= "3.9.6"
+shellingham==1.4.0; python_version >= "2.6" and python_version < "3.0" and python_full_version >= "3.6.2" or python_version > "3.0" and python_version < "3.1" and python_full_version >= "3.6.2" or python_version > "3.1" and python_version < "3.2" and python_full_version >= "3.6.2" or python_version > "3.2" and python_version < "3.3" and python_full_version >= "3.6.2" or python_full_version >= "3.6.2" and python_version < "3.10" and python_version > "3.3"
+six==1.16.0; python_full_version >= "3.6.2" and python_version >= "3.6" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 spotipy==2.19.0
 sqlparse==0.4.2; python_version >= "3.6"
 tabulate==0.8.9; python_version >= "3.6"
 text-unidecode==1.3; python_version >= "3.6"
-toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version <= "3.9.6" and python_full_version >= "3.3.0"
-types-python-slugify==5.0.0
-types-requests==2.25.6
-urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-watchdog==2.1.5; python_version >= "3.6"
+toml==0.10.2; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+types-python-slugify==5.0.2
+types-requests==2.25.12
+urllib3==1.26.7; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+watchdog==2.1.6; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
 youtube-dl==2021.6.6
