dynamic type checking

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 allow_redefinition = false
-check_untyped_defs = true
+disallow_untyped_defs = true
 ignore_errors = false
 implicit_reexport = false
 local_partial_types = true
