--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,7 @@ prompt_toolkit = "^3.0.2"
 mutagen = "^1.44.0"
 requests = "^2.24.0"
 spotipy = "^2.16.0"
-progressbar2 = "^3.53.1"
 humanize = "^3.0.1"
-prettytable = "^2.1.0"
 youtube_dl = "^2021.3.3"
 watchdog = "^2.0.2"
 pydub = "^0.25.1"
@@ -35,25 +33,27 @@ python-slugify = "^5.0.0"
 attrs = "^21.2.0"
 types-requests = "^2.25.0"
 colorlog = "^6.4.1"
-pgcli = "^3.2.0"
 psycopg2 = "^2.9.1"
 types-python-slugify = "^5.0.0"
 click-skeleton = "^0.19"
 gql = "^2.0.0"
+progressbar2 = "^4.0.0"
+prettytable = "^3.0.0"
+pgcli = "^3.3.0"
+beartype = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
 pylint = "^2.6.0"
-Pygments = "^2.7.0"
 pytest-docker-compose = "^3.1.2"
 poetry2setup = "^1.0.0"
-mypy = "^0.910"
 docker = { version = "^5.0", markers = "sys_platform != 'win32'" }
 pytest-cov = "^3.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^4.0.1"
+mypy = "^0.931"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
