--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ atomicwrites==1.4.0; python_full_version >= "3.6.2" and python_version < "3.10" 
 attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
 beartype==0.9.1; python_full_version >= "3.6.0"
-certifi==2021.10.8; python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
-charset-normalizer==2.0.10; python_full_version >= "3.6.2" and python_version >= "3" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
+certifi==2021.10.8; python_full_version >= "3.6.2" and python_version < "3.10"
+charset-normalizer==2.0.10; python_full_version >= "3.6.2" and python_version >= "3" and python_version < "3.10"
 cli-helpers==2.2.1; python_version >= "3.6"
 click-aliases==1.0.1; python_full_version >= "3.6.2" and python_version < "3.10"
 click-completion==0.5.2; python_full_version >= "3.6.2" and python_version < "3.10"
@@ -16,14 +16,15 @@ colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_
 colorlog==6.6.0; python_version >= "3.6"
 configobj==5.0.6; python_version >= "3.6"
 fuzzywuzzy==0.18.0
-gql==2.0.0
-graphql-core==2.3.2
+gql==3.0.0
+graphql-core==3.2.0; python_version >= "3.6" and python_version < "4"
 humanize==3.13.1; python_version >= "3.6"
-idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.5" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
+idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.6" and python_version < "3.10"
 iniconfig==1.1.1; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 jinja2==3.0.3; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 logging-tree==1.9
 markupsafe==2.0.1; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+multidict==6.0.2; python_version >= "3.7"
 munch==2.5.0; python_full_version >= "3.6.2" and python_version < "3.10"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 packaging==21.3; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
@@ -33,14 +34,13 @@ pgspecial==1.13.0; python_version >= "3.6"
 pluggy==1.0.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 prettytable==3.0.0; python_version >= "3.7"
 progressbar2==4.0.0; python_full_version >= "3.7.0"
-promise==2.3
 prompt-toolkit==3.0.24; python_full_version >= "3.6.2"
 psycopg2==2.9.3; python_version >= "3.6"
 py==1.11.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pyacoustid==1.2.2
 pydub==0.25.1
 pygments==2.11.2; python_version >= "3.6"
-pyparsing==3.0.6; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
+pyparsing==3.0.7; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pytest-click==1.0.2; python_full_version >= "3.6.2" and python_version < "3.10"
 pytest==6.2.5; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -50,11 +50,10 @@ python-utils==3.1.0; python_full_version >= "3.7.0"
 python-vlc==3.0.12118
 pytzdata==2020.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-rx==1.6.1
 semver==2.13.0; python_full_version >= "3.6.2" and python_version < "3.10"
 setproctitle==1.2.2; python_version >= "3.6"
 shellingham==1.4.0; python_version >= "2.6" and python_version < "3.0" and python_full_version >= "3.6.2" or python_version > "3.0" and python_version < "3.1" and python_full_version >= "3.6.2" or python_version > "3.1" and python_version < "3.2" and python_full_version >= "3.6.2" or python_version > "3.2" and python_version < "3.3" and python_full_version >= "3.6.2" or python_full_version >= "3.6.2" and python_version < "3.10" and python_version > "3.3"
-six==1.16.0; python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
+six==1.16.0; python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 spotipy==2.19.0
 sqlparse==0.4.2; python_version >= "3.6"
 tabulate==0.8.9; python_version >= "3.6"
@@ -63,7 +62,8 @@ toml==0.10.2; python_full_version >= "3.6.2" and python_version < "3.10" and pyt
 types-python-slugify==5.0.3
 types-requests==2.27.7
 types-urllib3==1.26.7; python_full_version >= "3.6.2" and python_version < "3.10"
-urllib3==1.26.8; python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
+urllib3==1.26.8; python_full_version >= "3.6.2" and python_version < "3.10"
 watchdog==2.1.6; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
+yarl==1.7.2; python_version >= "3.6"
 youtube-dl==2021.12.17
