--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ click-help-colors==0.9.1; python_full_version >= "3.6.2" and python_version < "3
 click-option-group==0.5.3; python_version >= "3.6" and python_version < "3.10" and python_full_version >= "3.6.2"
 click-skeleton==0.19; python_full_version >= "3.6.2" and python_version < "3.10"
 click==8.0.3; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6" and python_full_version < "4.0.0"
-colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.10" and platform_system == "Windows"
+colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version < "3.10" and platform_system == "Windows"
 colorlog==6.6.0; python_version >= "3.6"
+commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
 configobj==5.0.6; python_version >= "3.6"
 fuzzywuzzy==0.18.0
 gql==3.0.0
@@ -32,14 +33,13 @@ pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or py
 pgcli==3.3.1; python_version >= "3.6"
 pgspecial==1.13.0; python_version >= "3.6"
 pluggy==1.0.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
-prettytable==3.0.0; python_version >= "3.7"
 progressbar2==4.0.0; python_full_version >= "3.7.0"
-prompt-toolkit==3.0.24; python_full_version >= "3.6.2"
+prompt-toolkit==3.0.26; python_full_version >= "3.6.2"
 psycopg2==2.9.3; python_version >= "3.6"
 py==1.11.0; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pyacoustid==1.2.2
 pydub==0.25.1
-pygments==2.11.2; python_version >= "3.6"
+pygments==2.11.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
 pyparsing==3.0.7; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
 pytest-click==1.0.2; python_full_version >= "3.6.2" and python_version < "3.10"
 pytest==6.2.5; python_full_version >= "3.6.2" and python_version < "3.10" and python_version >= "3.6"
@@ -50,6 +50,7 @@ python-utils==3.1.0; python_full_version >= "3.7.0"
 python-vlc==3.0.12118
 pytzdata==2020.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+rich==11.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
 semver==2.13.0; python_full_version >= "3.6.2" and python_version < "3.10"
 setproctitle==1.2.2; python_version >= "3.6"
 shellingham==1.4.0; python_version >= "2.6" and python_version < "3.0" and python_full_version >= "3.6.2" or python_version > "3.0" and python_version < "3.1" and python_full_version >= "3.6.2" or python_version > "3.1" and python_version < "3.2" and python_full_version >= "3.6.2" or python_version > "3.2" and python_version < "3.3" and python_full_version >= "3.6.2" or python_full_version >= "3.6.2" and python_version < "3.10" and python_version > "3.3"
@@ -64,6 +65,6 @@ types-requests==2.27.7
 types-urllib3==1.26.7; python_full_version >= "3.6.2" and python_version < "3.10"
 urllib3==1.26.8; python_full_version >= "3.6.2" and python_version < "3.10"
 watchdog==2.1.6; python_version >= "3.6"
-wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
 yarl==1.7.2; python_version >= "3.6"
 youtube-dl==2021.12.17
