--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,111 +2,106 @@ astroid==2.9.3; python_full_version >= "3.6.2"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
 attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 audioread==2.1.9
+bandit==1.7.4; python_version >= "3.7"
 bcrypt==3.2.0; python_version >= "3.6" and sys_platform != "win32"
-beartype==0.9.1; python_full_version >= "3.6.0"
+beartype==0.10.2; python_full_version >= "3.6.0"
 bump2version==1.0.1; python_version >= "3.5"
-certifi==2021.10.8; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" and sys_platform != "win32" or python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.0" and sys_platform != "win32"
+certifi==2021.10.8; python_version >= "3.8" and python_full_version < "3.0.0" and platform_system == "Windows" and python_version < "4.0" and sys_platform != "win32" or python_full_version >= "3.6.0" and platform_system == "Windows" and python_version >= "3.8" and python_version < "4.0" and sys_platform != "win32"
 cffi==1.15.0; python_version >= "3.6" and sys_platform != "win32"
-charset-normalizer==2.0.11; python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "3.10" and sys_platform != "win32"
-cli-helpers==2.2.1; python_version >= "3.6"
-click-aliases==1.0.1; python_version >= "3.7" and python_version < "3.10"
-click-completion==0.5.2; python_version >= "3.7" and python_version < "3.10"
-click-didyoumean==0.3.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.7" and python_version < "3.10"
-click-help-colors==0.9.1; python_version >= "3.7" and python_version < "3.10"
-click-option-group==0.5.3; python_version >= "3.7" and python_version < "3.10"
-click-skeleton==0.20; python_version >= "3.7" and python_version < "3.10"
-click==8.0.3; python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and python_full_version < "4.0.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" and python_version < "3.10" or platform_system == "Windows" and python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.5.0") and (python_version >= "3.4" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.4" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0")
+charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.8" and python_version < "4.0" and sys_platform != "win32"
+click-aliases==1.0.1; python_version >= "3.8" and python_version < "4.0"
+click-completion==0.5.2; python_version >= "3.8" and python_version < "4.0"
+click-didyoumean==0.3.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.8" and python_version < "4.0"
+click-help-colors==0.9.1; python_version >= "3.8" and python_version < "4.0"
+click-option-group==0.5.3; python_version >= "3.8" and python_version < "4"
+click-skeleton==0.21; python_version >= "3.8" and python_version < "4.0"
+click==8.0.4; python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.6.2" and python_full_version < "4.0.0"
+colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and python_full_version < "4.0.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0") and (python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.8" and python_version < "4.0" and platform_system == "Windows" and python_full_version >= "3.5.0") and (python_version >= "3.4" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.4" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0")
 colorlog==6.6.0; python_version >= "3.6"
 commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-configobj==5.0.6; python_version >= "3.6"
 coverage-badge==1.1.0
-coverage==6.3.1; python_version >= "3.7"
+coverage==6.3.2; python_version >= "3.7"
 cryptography==36.0.1; python_version >= "3.6" and sys_platform != "win32"
-distro==1.6.0; python_version >= "3.4"
+distro==1.7.0; python_version >= "3.6"
 docker-compose==1.29.2; python_version >= "3.4"
 docker==5.0.3; python_version >= "3.6" or sys_platform != "win32"
 dockerpty==0.4.1; python_version >= "3.4"
 docopt==0.6.2; python_version >= "3.4"
 docutils==0.18.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+dparse==0.5.1; python_version >= "3.5"
+edgedb==0.22.0
 flake8==4.0.1; python_version >= "3.6"
 fuzzywuzzy==0.18.0
-gql==3.0.0
-graphql-core==3.2.0; python_version >= "3.6" and python_version < "4"
-humanize==3.14.0; python_version >= "3.6"
-idna==3.3; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" and sys_platform != "win32" or python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "3.10" and sys_platform != "win32"
+gitdb==4.0.9; python_version >= "3.7"
+gitpython==3.1.27; python_version >= "3.7"
+humanize==4.0.0; python_version >= "3.7"
+idna==3.3; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform != "win32" or python_full_version >= "3.6.0" and python_version >= "3.8" and python_version < "4.0" and sys_platform != "win32"
 iniconfig==1.1.1; python_version >= "3.6"
-isort==5.10.1; python_full_version >= "3.6.2" and python_version < "4.0"
-jinja2==3.0.3; python_version >= "3.7" and python_version < "3.10"
+isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
+jinja2==3.0.3; python_version >= "3.8" and python_version < "4.0"
 jsonschema==3.2.0; python_version >= "3.4"
 lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 logging-tree==1.9
-markupsafe==2.0.1; python_version >= "3.7" and python_version < "3.10"
+markupsafe==2.1.0; python_version >= "3.8" and python_version < "4.0"
 mccabe==0.6.1; python_full_version >= "3.6.2" and python_version >= "3.6"
-multidict==6.0.2; python_version >= "3.7"
-munch==2.5.0; python_version >= "3.7" and python_version < "3.10"
+munch==2.5.0; python_version >= "3.8" and python_version < "4.0"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 mypy-extensions==0.4.3; python_version >= "3.6"
 mypy==0.931; python_version >= "3.6"
 packaging==21.3; python_version >= "3.6"
 paramiko==2.9.2; python_version >= "3.6" and sys_platform != "win32"
-pendulum==2.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pgcli==3.3.1; python_version >= "3.6"
-pgspecial==1.13.0; python_version >= "3.6"
-platformdirs==2.4.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+pbr==5.8.1; python_version >= "3.7"
+platformdirs==2.5.1; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==1.0.0; python_version >= "3.6"
-poetry-core==1.0.7; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+poetry-core==1.0.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 poetry2setup==1.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 progressbar2==4.0.0; python_full_version >= "3.7.0"
-prompt-toolkit==3.0.27; python_full_version >= "3.6.2"
-psycopg2==2.9.3; python_version >= "3.6"
+prompt-toolkit==3.0.28; python_full_version >= "3.6.2"
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pyacoustid==1.2.2
 pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0"
 pydub==0.25.1
 pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pygments==2.11.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
+pygments==2.11.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.5"
 pylint==2.12.2; python_full_version >= "3.6.2"
 pynacl==1.5.0; python_version >= "3.6" and sys_platform != "win32"
 pyparsing==3.0.7; python_version >= "3.6"
 pyrsistent==0.18.1; python_version >= "3.7"
-pytest-click==1.0.2
+pytest-click==1.1.0
 pytest-cov==3.0.0; python_version >= "3.6"
 pytest-docker-compose==3.2.1
 pytest-timeout==2.1.0; python_version >= "3.6"
-pytest==7.0.0; python_version >= "3.6"
-python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+pytest==7.0.1; python_version >= "3.6"
 python-dotenv==0.19.2; python_version >= "3.5"
 python-levenshtein==0.12.2
-python-slugify==5.0.2; python_version >= "3.6"
+python-slugify==6.1.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 python-utils==3.1.0; python_full_version >= "3.7.0"
-python-vlc==3.0.12118
-pytzdata==2020.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+python-vlc==3.0.16120
 pywin32==227
-pyyaml==5.4.1; python_version >= "3.4" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.4"
+pyyaml==5.4.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-restructuredtext-lint==1.3.2
-rich==11.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-semver==2.13.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" or python_version >= "3.7" and python_version < "3.10" and python_full_version >= "3.4.0"
-setproctitle==1.2.2; python_version >= "3.6"
-shellingham==1.4.0; python_version >= "3.7" and python_version < "3.10"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" and sys_platform != "win32" or python_full_version >= "3.5.0" and python_version >= "3.7" and python_version < "3.10" and sys_platform != "win32"
+restructuredtext-lint==1.4.0
+rich==11.2.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
+safety==1.10.3; python_version >= "3.5"
+semver==2.13.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.4.0"
+shellingham==1.4.0; python_version >= "3.8" and python_version < "4.0"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform != "win32" or python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.4.0" and sys_platform != "win32"
+smmap==5.0.0; python_version >= "3.7"
 spotipy==2.19.0
-sqlparse==0.4.2; python_version >= "3.6"
-tabulate==0.8.9; python_version >= "3.6"
-text-unidecode==1.3; python_version >= "3.6"
+stevedore==3.5.0; python_version >= "3.7"
+text-unidecode==1.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 texttable==1.6.4; python_version >= "3.4"
-toml==0.10.2; python_full_version >= "3.6.2"
+toml==0.10.2; python_full_version >= "3.6.2" and python_version >= "3.6" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5")
 tomli==2.0.1; python_version >= "3.7"
 types-python-slugify==5.0.3
-types-requests==2.27.8
-types-urllib3==1.26.9; python_version >= "3.7" and python_version < "3.10"
-typing-extensions==4.0.1; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.6"
-urllib3==1.26.8; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.10" and sys_platform != "win32" or python_full_version >= "3.6.0" and python_version < "3.10" and python_version >= "3.7" and sys_platform != "win32"
+types-requests==2.27.11
+types-urllib3==1.26.10; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.1.1; python_version >= "3.6"
+urllib3==1.26.8; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform != "win32" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.8" and sys_platform != "win32"
+vulture==2.3; python_version >= "3.6"
 watchdog==2.1.6; python_version >= "3.6"
-wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.6"
+wcwidth==0.2.5; python_full_version >= "3.6.2"
 websocket-client==0.59.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform != "win32" or python_version >= "3.6" and sys_platform != "win32" and python_full_version >= "3.4.0"
 wrapt==1.13.3; python_full_version >= "3.6.2"
-yarl==1.7.2; python_version >= "3.6"
 youtube-dl==2021.12.17
