--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -22,6 +22,7 @@ commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0
 coverage-badge==1.1.0
 coverage==6.3.2; python_version >= "3.7"
 cryptography==36.0.1; python_version >= "3.6" and sys_platform != "win32"
+deepdiff==5.7.0; python_version >= "3.6"
 distro==1.7.0; python_version >= "3.6"
 docker-compose==1.29.2; python_version >= "3.4"
 docker==5.0.3; python_version >= "3.6" or sys_platform != "win32"
@@ -48,6 +49,7 @@ munch==2.5.0; python_version >= "3.8" and python_version < "4.0"
 mutagen==1.45.1; python_version >= "3.5" and python_version < "4"
 mypy-extensions==0.4.3; python_version >= "3.6"
 mypy==0.931; python_version >= "3.6"
+ordered-set==4.0.2; python_version >= "3.6"
 packaging==21.3; python_version >= "3.7"
 paramiko==2.10.1; python_version >= "3.6" and sys_platform != "win32"
 pbr==5.8.1; python_version >= "3.7"
